<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">S13</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="news">Новости</string>
    <string name="posters">Афиша</string>
    <string name="vk">ВКонтакте</string>
    <string name="adverts">Объявления</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="unknown_server_error">Неизвестная ошибка</string>
    <string name="response_is_empty">Неизвестная ошибка</string>
    <string name="ok">OK</string>
    <string name="error">Ошибка</string>
    <string name="commentHeader">Комментарии</string>

    <string name="DETAIL_VIEW_TYPE">detail_view_type</string>
    <string name="BOTTOM_POSITION">bottom_position</string>

    <string name="news_fragment_title">Новости</string>
    <string name="vk_fragment_title">ВКонтакте</string>
    <string name="poster_fragment_title">Афиша</string>
    <string name="vk_video_id">vk_video_id</string>
    <string name="settings">Настройки</string>

    <string name="poster_cinema">Кино</string>
    <string name="poster_party">Вечеринки</string>
    <string name="poster_concerts">Концерты</string>
    <string name="poster_theatre">Спектакли</string>
    <string name="poster_exhibition">Выставки</string>
    <string name="poster_event">События</string>
    <string name="poster_sport">Спорт</string>

    <string name="rate_key">rate</string>
    <string name="authenticate_key">auth</string>
    <string name="load_images_key">load_images</string>

    <string name="feedBackMail">mailto:green_2005@tut.by</string>
    <string name="prefTitle">Настройки</string>
    <string name="dislike">Не нравится</string>
    <string name="like">Нравится</string>
    <string name="reply">Ответить</string>
    <string name="userName">Имя пользователя</string>
    <string name = "pwd">Пароль</string>
    <string name = "auth_dialog_title">Параметры аутентификации</string>
    <string name = "auth_completed_ok">Успешно завершено</string>
    <string name = "auth_error">Ошибка авторизации</string>
    <string name = "not_authenticated">Необходима аутентификация</string>
    <string name = "please_wait">Пожалуйста подождите</string>
    <string name = "your_comment">Ваш комментарий</string>
    <string name = "unable_resolve_host">Unable to resolve host</string>
    <string name = "check_inet">Проверьте подключение к сети Интернет</string>
    <string name = "comment_editing">Комментарий</string>
    <string name = "share">Поделиться</string>
    <string name = "add_to_black_list">Добавить %s в черный список?</string>
    <string name = "add_to_black_list_2">Добавить в черный список</string>
    <string name = "black_list">Черный список</string>
    <string name = "del">Удалить</string>
    <string name = "black_list_empty">Список заблокированных пользователей пуст</string>
    <string name= "s13_name"> - Блог Гродно s13</string>
</resources>
