<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Настройки">
        <PreferenceScreen
            android:title="Понравилось приложение?"
            android:summary="Оставить отзыв"
            android:key="@string/rate_key">
        </PreferenceScreen>

        <PreferenceScreen
            android:title="Есть предложения?"
            android:summary="Написать письмо автору"
            android:key="sendEmail">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/feedBackMail" />
        </PreferenceScreen>

        <PreferenceScreen
            android:title="Аутентификация"
            android:summary="Введите имя пользователя и пароль"
            android:key="@string/authenticate_key">
        </PreferenceScreen>

        <CheckBoxPreference
            android:title="Загрузка изображений"
            android:defaultValue="true"
            android:summary="Отключите для экономии трафика"
            android:key="@string/load_images_key"
            >
        </CheckBoxPreference>

        <PreferenceScreen
            android:title="Черный список"
            android:summary="Перечень пользователей, чьи комментарии не видны"
            android:key="@string/black_list">
        </PreferenceScreen>

    </PreferenceCategory>
</PreferenceScreen>
