<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/viewUp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/backgrounditem"
        >

        <ImageView
            android:id="@+id/up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/commentupbig" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/up"
            android:text="@string/like" />
    </RelativeLayout>

    <View
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_below="@+id/viewUp"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/viewDown"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewUp"
        android:background="@drawable/backgrounditem"
        >

        <ImageView
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/commentdownbig" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/down"
            android:text="@string/dislike" />
    </RelativeLayout>

    <View
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_below="@+id/viewDown"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/viewReply"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewDown"
        android:background="@drawable/backgrounditem"

        >

        <ImageView
            android:id="@+id/reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/reply" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/reply"
            android:text="@string/reply" />
    </RelativeLayout>

    <View
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_below="@+id/viewReply"
        android:background="@color/divider" />


    <RelativeLayout
        android:id="@+id/viewBlock"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewReply"
        android:background="@drawable/backgrounditem"
        >

        <ImageView
            android:id="@+id/block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/add_to_blacklist" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/block"
            android:text="@string/add_to_black_list_2" />
    </RelativeLayout>

</RelativeLayout>